Added endpoint to get the log details of a conversion.
